Code clean: handle Checkstyle warning.
Change-Id: Ie89611f3cdb111a461ffd6af4a724bd1088fcc11